# portfolio

./: .gitignore
backend/: .env.example  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 809f653f4ec4_create_projects_and_project_images_.py
backend/app/: main.py
backend/app/api/: auth.py  projects.py  uploads.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  project.py
backend/app/schemas/: __init__.py  project.py
docs/: flujo-comunicaciones.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/admin/: AdminApp.tsx  AdminDashboard.tsx  AdminLogin.tsx  ProjectForm.tsx
frontend/src/components/: BackgroundGlow.tsx  GlassPanel.tsx  NavBar.tsx  RevealOnScroll.tsx
frontend/src/lib/: api.ts  auth.ts  theme.tsx
frontend/src/sections/: About.tsx  Contact.tsx  Hero.tsx  Projects.tsx
