[project]
name = "portfolio-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "boto3>=1.43.34",
    "fastapi>=0.137.2",
    "pydantic-settings>=2.14.2",
    "pymysql>=1.2.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
